# security-chat

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .nsprc  .prettierignore  README.md  index.html  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1696255339633-a363a5b3a99e7.mjs
.cargo/: config.toml
doc/: roadmap.md
examples/simple-client/: Cargo.toml
examples/simple-client/src/: main.rs
proto/: authentication.proto  protocol.proto
server/: .env  Cargo.toml  build.rs  diesel.toml
server/authentication/: Cargo.toml
server/authentication/src/: lib.rs  prelude.rs  service.rs
server/crate-proto/: Cargo.toml  build.rs
server/crate-proto/src/: lib.rs
server/database/: Cargo.toml
server/database/src/: lib.rs  models.rs  schema.rs
server/migrations/2023-07-19-123548_create/: down.sql  up.sql
server/schema/: Cargo.toml
server/service/: Cargo.toml
server/service/src/: database.rs  lib.rs  prelude.rs  schema.rs  service.rs
server/service/src/service/: authentication.rs
server/src/: database.rs  logger.rs  main.rs  models.rs  schema.rs  secter.rs  service.rs
server/testing_data/: MyCertificate.crt  MyKey.key
src/: Api.js  App.svelte  main.js  root.tsx
src-tauri/: .env  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/api-high-level/: Cargo.toml
src-tauri/api-high-level/benches/: api_client.rs
src-tauri/api-high-level/src/: client.rs  lib.rs  prelude.rs  test_utils.rs
src-tauri/api-high-level/src/client/: config.rs  error.rs  impl_authentication.rs  impl_config.rs  impl_crypto.rs  impl_message.rs  notification.rs  storage_crypto.rs
src-tauri/api-high-level/src/client/impl_config/: client_init_config.rs  impl_serde.rs
src-tauri/api-high-level/src/client/impl_crypto/: aes_key_for_accept.rs
src-tauri/api-high-level/src/client/storage_crypto/: error.rs
src-tauri/api-lower-level/: Cargo.toml
src-tauri/api-lower-level/benches/: registration.rs
src-tauri/api-lower-level/src/: built_info.rs  lib.rs  test_utils.rs
src-tauri/api-lower-level/src/authentication/: error.rs  mod.rs  tokens.rs
src-tauri/api-lower-level/src/certificate/: connection_parameters.rs  error.rs  getter.rs  mod.rs
src-tauri/api-lower-level/src/certificate/getter/: impl_json.rs
src-tauri/api-lower-level/src/client/: crypto.rs  error.rs  impl_aes.rs  impl_crypto.rs  impl_message.rs  max_size.rs  mod.rs
src-tauri/api-lower-level/src/client/crypto/: aes.rs  common.rs  ecdh.rs
src-tauri/api-lower-level/src/client/crypto/ecdh/: ephemeral_secret_def.rs
src-tauri/api-lower-level/src/client/impl_crypto/: aes.rs  ecdh.rs  error.rs
src-tauri/api-lower-level/src/client/impl_crypto/ecdh/: ephemeral_secret_def.rs
src-tauri/cache/: Cargo.toml
src-tauri/cache/src/: cache_struct.rs  error.rs  lib.rs  prelude.rs
src-tauri/cache/src/cache_struct/: db_trait.rs  error.rs
src-tauri/cache/src/cache_struct/db_trait/: sqlite_impl.rs
src-tauri/crate-proto/: Cargo.toml  build.rs
src-tauri/crate-proto/src/: lib.rs
src-tauri/crate-unsafe/: Cargo.toml
src-tauri/crate-unsafe/src/: lib.rs
src-tauri/crate-unsafe/src/safe_impl/: crypto.rs
src-tauri/crate-unsafe/src/safe_impl/crypto/: ephemeral_secret_def.rs
src-tauri/crate-unsafe/src/unsafe_impl/: crypto.rs
src-tauri/crate-unsafe/src/unsafe_impl/crypto/: ephemeral_secret_def.rs
src-tauri/fcore/: Cargo.toml
src-tauri/fcore/src/: config.rs  env.rs  lib.rs  lock.rs  prelude.rs  rand.rs  test_utils.rs
src-tauri/fcore/src/config/: impl_bincode.rs
src-tauri/high-level/: Cargo.toml
src-tauri/high-level-client/: Cargo.toml
src-tauri/high-level/benches/: bench.rs
src-tauri/high-level/src/: bincode_config.rs  cache_message.rs  client.rs  config.rs  json_config.rs  lib.rs  prelude.rs  test_utils.rs
src-tauri/high-level/src/client/: builder.rs  client_config.rs  config.rs  error.rs  impl_crypto.rs  impl_message.rs  notification.rs  order_adding_nicknames.rs  storage_crypto.rs  user.rs
src-tauri/high-level/src/client/builder/: info_struct.rs
src-tauri/high-level/src/client/impl_crypto/: aes_key_for_accept.rs
src-tauri/high-level/src/client/storage_crypto/: error.rs
src-tauri/impl-chat/: Cargo.toml  build.rs
src-tauri/impl-chat/benches/: registration.rs
src-tauri/impl-chat/src/: lib.rs  prelude.rs  test_utils.rs
src-tauri/impl-chat/src/client/: config.rs  crypto.rs  error.rs  mod.rs
src-tauri/impl-chat/src/client/crypto/: aes.rs  common.rs  ecdh.rs  error.rs
src-tauri/lower-level/: Cargo.toml  build.rs
src-tauri/lower-level/benches/: registration.rs
src-tauri/lower-level/src/: built_info.rs  lib.rs  test_utils.rs  utils.rs
src-tauri/lower-level/src/client/: config.rs  crypto.rs  error.rs  impl_aes.rs  impl_message.rs  max_size.rs  mod.rs
src-tauri/lower-level/src/client/crypto/: aes.rs  ecdh.rs  error.rs
src-tauri/lower-level/src/client/crypto/ecdh/: ephemeral_secret_def.rs
src-tauri/report/html/: index.html  jscpd-report.json
src-tauri/src/: check_version.rs  command.rs  env_config.rs  fix.rs  global.rs  lock.rs  logger.rs  main.rs  path.rs
src-tauri/src/logger/: crate_level_filter.rs  error.rs
src-tauri/vim-like-command/: Cargo.toml
src-tauri/vim-like-command/src/: command.rs  lib.rs  prelude.rs  runner.rs  test_utils.rs
src-tauri/vim-like-command/src/command/: add_crypto.rs  send_crypto.rs
src-tauri/vim-like-command/src/runner/: builder.rs  error.rs  impl_fuzzy_search.rs
src/components/: badge_version.tsx  link.tsx  side_bar.tsx  tabs.tsx
src/components/add_friends/: add_friends.tsx  all_friends.tsx  greeting.tsx  requests_friends.tsx
src/components/side_bar/: side_bar.css  side_bar.tsx
src/components/small/: badge_version.tsx  link.tsx  (+1 more)
src/lib/: loading_center.svelte
src/pages/: Main.svelte  Welcom.svelte
src/routes/: +page.svelte  [...404].tsx  index.tsx  main.tsx  registration.tsx  welcom.tsx
src/styles/: scrollbar.module.scss  scrollbar.scss
src/tests/: hello.test.ts
src/ts/: api-tauri.ts  custom-toast.tsx
(+15 files in other folders)
