[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bb8 = "0.8.1"
color-eyre = "0.6.2"
diesel = "2.1.0"
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
dotenv = "0.15.0"
log = "0.4.19"
log4rs = { version = "1.2.0", default-features = false, features = ["file_appender", "threshold_filter", "console_appender"] }
mimalloc = { version = "0.1.37", default-features = false }
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["gzip"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = "abort"

[build-dependencies]
tonic-build = "0.9.2"
