[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["schema"]

[workspace.dependencies]
log = "0.4.19"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.9.2", features = ["gzip"] }

[dependencies]
anyhow = "1.0.72"
color-eyre = "0.6.2"
dotenv = "0.15.0"
log.workspace = true
log4rs = { version = "1.2.0", default-features = false, features = ["file_appender", "threshold_filter", "console_appender"] }
mimalloc = { version = "0.1.37", default-features = false }
tokio.workspace = true
schema = { path = "schema" }
tonic.workspace = true

[profile.release]
incremental = true
