[package]
name = "server"
version = "0.1.0-alpha.2"
description = "Client for anonymous and private communication"
authors = ["CryptoGladi"]
license = "GPL-3.0-or-later"
repository = "https://github.com/CryptoGladi/security-chat"
edition = "2021"

[workspace]
members = ["service", "crate-proto", "authentication", "database"]

[workspace.dependencies]
log = "0.4.19"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.9.2", features = ["gzip"] }
bb8 = "0.8.1"
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"

[dependencies]
anyhow = "1.0.72"
color-eyre = "0.6.2"
dotenv = "0.15.0"
log.workspace = true
log4rs = { version = "1.2.0", default-features = false, features = ["file_appender", "threshold_filter", "console_appender"] }
mimalloc = { version = "0.1.37", default-features = false }
tokio.workspace = true
service = { path = "service" }
tonic.workspace = true
authentication = { path = "authentication" }
rand = { version = "0.8.5", features = [] }

[profile.release]
incremental = true
