[package]
name = "security-chat"
version = "0.1.0-alpha.2"
description = "Client for anonymous and private communication"
authors = ["CryptoGladi"]
license = "GPL-3.0-or-later"
repository = "https://github.com/CryptoGladi/security-chat"
edition = "2021"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
lto = "off"

[profile.release]
incremental = true
debug = true

[workspace]
members = ["lower-level", "high-level", "crate-proto", "vim-like-command", "cache", "fcore"]

[workspace.dependencies]
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.43"
http = "0.2.9"
tonic = { version = "0.9.2", features = ["gzip"] }
bincode = "1.3.3"
hashbrown = { version = "0.14.0", features = ["serde"] }
anyhow = "1.0.75"
async-trait = "0.1.73"
const_format = "0.2.31"

[dependencies]
tauri = { version = "1.4.1", features = [ "global-shortcut-all", "shell-open"] }
vim-like-command = { path = "vim-like-command" }
serde.workspace = true
serde_json.workspace = true
high-level = { path = "high-level" }
open = "5.0.0"
log.workspace = true
dirs = "5.0.1"
simple_logger = "4.2.0"
once_cell = "1.18.0"
dotenv = "0.15.0"
fcore = { path = "fcore", default-features = false }
color-backtrace = "0.6.0"
version-compare = "0.1.1"
tl = "0.7.7"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
const_format.workspace = true
random_name_generator = "0.3.6"
rand = "0.8.5"

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
