[package]
name = "service"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-stream = "0.1.14"
tonic.workspace = true
uuid = { version = "1.4.1", features = ["v4"] }
log.workspace = true
crate-proto = { path = "../crate-proto" }
rand = "0.8.5"
database = { path = "../database" }
diesel.workspace = true
bb8.workspace = true
diesel-async.workspace = true