[package]
name = "api-lower-level"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
tonic.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
p384.workspace = true
http.workspace = true
crate-proto = { path = "../crate-proto"}
fcore = { path = "../fcore" }
ignore = "0.4.21"
derivative.workspace = true
tokio = "1.32.0"
jwt = "0.16.0"
chrono.workspace = true
downloader = { version = "0.2.7", features = ["rustls-tls", "verify"] }
file-hashing = { version = "0.1.2", default-features = false }
sha2 = "0.10.8"

[dev-dependencies]
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
fcore = { path = "../fcore" }
totally-safe-transmute = "0.0.4"
rand_chacha = "0.3.1"

[lints]
workspace = true
