[package]
name = "cache"
version = "0.0.0"
edition = "2021"

[dependencies]
bincode.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx = { version = "0.7.1", default-features = false, features = ["sqlite"] }