[package]
name = "cache"
version = "0.0.0"
edition = "2021"

[dependencies]
bincode.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx = { version = "0.7.1", default-features = false, features = ["sqlite", "runtime-tokio"] }
const_format = "0.2.31"

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }
