[package]
name = "fcore"
version = "0.0.0"
edition = "2021"

[features]
default = ["testing"]
testing = ["dep:rand", "dep:temp-dir"]

[dependencies]
rand = { version = "0.8.5", optional = true }
temp-dir = { version = "0.1.11", optional = true }
log.workspace = true
fslock = "0.2.1"
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
bincode.workspace = true

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"
