[package]
name = "fcore"
version = "0.0.0"
edition = "2021"

[features]
default = ["testing"]
testing = ["dep:temp-dir"]

[dependencies]
temp-dir = { version = "0.1.11", optional = true }
log.workspace = true
fslock = "0.2.1"
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
bincode.workspace = true
rand = { version = "0.8.5", default-features = false, features = ["rand_chacha"] }
rand_chacha = "0.3.1"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"
