[package]
name = "high-level"
version = "0.0.0"
edition = "2021"

[dependencies]
lower-level = { path = "../lower-level" }
thiserror.workspace = true
serde.workspace = true
http.workspace = true
hashbrown = { version = "0.14.0", features = ["serde"] }
bincode = "1.3.3"
tracing = "0.1.37"

[dev-dependencies]
rand = "0.8.5"
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }
tracing-test = "0.2.4"
