[package]
name = "high-level"
version = "0.0.0"
edition = "2021"

[dependencies]
lower-level = { path = "../lower-level" }
thiserror.workspace = true
serde.workspace = true
http.workspace = true
hashbrown.workspace = true
bincode.workspace = true
crate-proto = { path = "../crate-proto"}
kanal = "0.1.0-pre8"
tokio = "1.29.1"
cache = { path = "../cache" }
log.workspace = true

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
rand = "0.8.5"
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
