[package]
name = "impl-chat"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
thiserror = "1.0.43"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"

[[bench]]
name = "registration"
harness = false
