[package]
name = "lower-level"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
tonic = { version = "0.9.2", features = ["gzip"] }
prost = "0.11.9"
prost-types = "0.11.9"
thiserror.workspace = true
log.workspace = true
serde.workspace = true
p384 = { version = "0.13.0", default-features = false, features = ["ecdh"] }
rand = { version = "0.8.5", default-features = false, features = ["rand_chacha"] }
rand_chacha = "0.3.1"
http.workspace = true

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"

[[bench]]
name = "registration"
harness = false
