[package]
name = "vim-like-command"
version = "0.0.0"
edition = "2021"

[dependencies]
high-level = { path = "../high-level" }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["full"] }