[package]
name = "vim-like-command"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
api-high-level = { path = "../api-high-level" }
log.workspace = true
ngrammatic = "0.4.0"
thiserror.workspace = true
hashbrown.workspace = true

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
fcore = { path = "../fcore" }

[lints]
workspace = true